# tinyproto

./: .gitignore  Dockerfile
examples/esp32_idf/uart/tinyfd_loopback/: .gitignore  CMakeLists.txt
examples/esp32_idf/uart/tinyfd_loopback/components/tinyproto/: CMakeLists.txt
examples/esp32_idf/uart/tinyfd_loopback/main/: CMakeLists.txt  main.cpp
examples/linux/hdlc_demo/: hdlc_demo.cpp
python/: fd.cpp  hdlc_ll.cpp  main.cpp
src/: mainpage.dox
src/hal/: tiny_types.h
src/link/: TinyFdLinkLayer.cpp  TinyFdLinkLayer.h  TinyHdlcLinkLayer.cpp  TinyHdlcLinkLayer.h  TinyLinkLayer.h  TinySerialFdLink.cpp  TinySerialFdLink.h  TinySerialHdlcLink.cpp  TinySerialHdlcLink.h  TinySerialLinkLayer.h
src/proto/fd/: tiny_fd.c  tiny_fd.h  tiny_fd_int.h
src/proto/hdlc/high_level/: hdlc.c
src/proto/hdlc/low_level/: hdlc.c  hdlc.h  hdlc_int.h
src/proto/light/: tiny_light.c
unittest/helpers/: tiny_hdlc_helper.cpp
